# hull

./: .claudeignore  .coverage  .cplt.toml  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  PLAN.md  RATIONALE.md  README.md  ROADMAP.md  SBOM.json  SPEC.md  STATE.md  TEST.md  pyproject.toml  spectralia_v1_phase1.md  spektralia.toml  spektralia_v2_phase2.md  spektralia_v2_proposal.md  spektralia_v4_proposal.md  start-implementing-spektralia-v1-md-enumerated-plum.md
.claude/: settings.hooked.json  settings.json  settings.json.bak  settings.unhooked.json
.claude/agents/: file-issue.md  spec-conformance.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml  performance_regression.yml  spec_rfc.yml  task.yml
.github/codeql/: codeql-config.yml
.github/workflows/: AGENTS.md  betterleaks.yml  ci-template.yml  ci.yml  codeql.yml  dependency-review.yml  gitleaks.yml  guarddog.yml  image-sign.yml  latency.yml  legacy-name-guard.yml  lock-drift.yml  pr-title-lint.yml  redos-fuzz.yml  release-template.yml  scorecard.yml  signature-verify.yml
docs/: AGENTS.md  BLUEPAPER_TEMPLATE.md  BOOTSTRAP.md  CI.md  COMPLIANCE.md  ENDPOINT_STACK.md  GOVERNANCE.md  INSTALL.md  JETTISON_TEMPLATE.md  PLAN.md  RATIONALE.md  REPO_SETTINGS.md  SANDBOX_ALTERNATIVES.md  SPEC.md  TEST.md  THREATS.md  TRANSFER.md  TROUBLESHOOT.md
endpoint/: README.md  TESTING.md  cplt-global-config.toml  spektralia.endpoint.toml
endpoint/prempti/: spektralia.rules.yaml
infra/sandbox/: .env.example  Containerfile  docker-compose.yml  setup.sh  start.sh
infra/sandbox/landlock/: agent.policy  entrypoint.sh
infra/sandbox/proxy/: allowed-domains.txt  blocked-domains.txt  squid.conf
integrations/claude/: AGENTS.md  README.md  settings.example.json
integrations/claude/hooks/: post_tool_use.py  pre_tool_use.py  session_start.py  stop.py  user_prompt_submit.py
integrations/claude_code_hooks/: README.md  post_tool_use.py  pre_tool_use.py  session_start.py  settings.example.json  stop.py  user_prompt_submit.py
integrations/copilot/: spektralia.json
integrations/copilot/hooks/: _common.py  session_start.py
integrations/copilot_hooks/: _common.py  post_tool_use.py  pre_tool_use.py  stop.py  user_prompt_submit.py
migration/: AGENTS.md  MAIN.md  layer0_interlock.md  layer1_sieve.md  layer2_arbiter.md  layer3_airlock.md  layer4_jettison.md
proposals/: spektralia_v3_proposal.md
scripts/: apply-branch-protection.sh  audit_hook_invariants.py  canary_curator.py  check_lock_sbom_fresh.py  eval_baseline.json  eval_gate.py  latency_bench.py  legacy_name_guard.py  redos_fuzz.py  redteam_fuzz.py  run-claude-sandboxed.sh  threshold_sweep.py
src/spektralia/: __init__.py  anomaly.py  audit.py  cache.py  canary.py  classifier.py  cli.py  config.py  decode.py  entropy.py  errors.py  gate.py  heartbeat.py  hook_manifest.py  install.py  integrity.py  memory_safety.py  ner.py  normalize.py  ollama_trust.py  output_gate.py  patterns.py  prempti.py  sandbox.py  sanitizer.py  scanner.py
src/spektralia/canary/: __init__.py
src/spektralia/sessions/: __init__.py  writer.py
tests/: conftest.py  test_anomaly.py  test_audit_chain.py  test_audit_extra.py  test_audit_no_values.py  test_cache.py  test_canary.py  test_classifier.py  test_cli.py  test_config_hash_covers_all_settings.py  test_config_loading.py  test_corpus.py  test_decode.py  test_entropy.py  test_errors.py  test_gate.py  test_heartbeat.py  test_hook_manifest.py  test_hooks.py  test_install.py  test_integrity.py  test_memory_safety.py  test_ner.py  test_no_secret_in_exceptions.py  test_normalize.py  test_ollama_trust.py  test_output_gate.py  test_patterns.py  test_prempti.py  test_sandbox.py  test_sandbox_cplt_sndbx.py  test_sanitizer.py  test_scanner.py  test_sessions_writer.py
tests/corpus/eval/classifier/: benign_1.txt  benign_2.txt  confidential_sensitive_1.txt  credentials_sensitive_1.txt  pii_sensitive_1.txt  prompt_injection_sensitive_1.txt
tests/corpus/eval/negative/: changelog_entry.txt  code_python.txt  code_yaml.txt  error_message.txt  fake_uuid.txt  git_diff.txt  git_hash.txt  interview_notes.txt  json_config.txt  legal_text.txt  markdown_doc.txt  phone_number.txt  product_description.txt  prose_business.txt  prose_technical.txt  public_ip.txt  scientific_notation.txt  test_data_numbers.txt  url_public.txt  version_string.txt
tests/corpus/eval/positive/aws_key/: 1.txt  2.txt
tests/corpus/eval/positive/credit_card/: 1.txt
tests/corpus/eval/positive/email/: 1.txt  2.txt  3.txt
tests/corpus/eval/positive/github_token/: 1.txt  2.txt
tests/corpus/eval/positive/jwt/: 1.txt
tests/corpus/eval/positive/slack_token/: 1.txt
tests/corpus/eval/positive/stripe_key/: 1.txt
tests/corpus/injection/: b64_key.txt  homoglyphed_email.txt  zwsp_key.txt
tests/corpus/negative/: filepath.txt  lorem.txt  semver.txt
tests/corpus/positive/: api_key_generic.txt  cve.txt  github_token.txt  google_api_key.txt  google_oauth.txt  internal_host.txt  jwt.txt  no_pid.txt  private_key_block.txt  private_key_body.txt  slack_token.txt  stripe_key.txt
