[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spektralia"
version = "0.1.0"
description = "Local pre-cloud sensitivity gate"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "regex",
    "keyring",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "cyclonedx-bom",
]

[project.scripts]
spektralia = "spektralia.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/spektralia"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.envs.default]
features = ["dev"]
