[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spektralia"
version = "0.1.0"
description = "Local pre-cloud sensitivity gate"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "regex",
    "keyring",
]

[project.optional-dependencies]
# Cryptographic hook identity (Ed25519). Optional: when absent, hook identity
# degrades to the keyring HMAC token (see src/spektralia/integrity.py).
crypto = [
    "cryptography>=42",
]
# Contextual PII / NER (#44). Optional: when absent, the NER pass is a no-op and
# the gate falls back to regex + entropy + classifier. The language model must be
# downloaded separately, e.g. `python -m spacy download en_core_web_sm`.
ner = [
    "spacy>=3.7",
]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "cyclonedx-bom",
    "pip-tools",
    "pytest-cov>=5",
    "mypy>=1.14",
    "black>=24.10",
    "ruff>=0.8",
    "pip-audit>=2.8",
    # Exercise the Ed25519 hook-identity path in CI; production installs opt in
    # via the `crypto` extra.
    "cryptography>=42",
]

[project.scripts]
spektralia = "spektralia.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/spektralia"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.envs.default]
features = ["dev"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # Line too long (black handles this)
    "B027",   # Empty method in abstract base class (acceptable pattern)
    "B007",   # Loop variable being overwritten (acceptable in many cases)
    "F841",   # Local variable assigned but never used (test setup patterns)
    "E741",   # Ambiguous variable name (single-letter vars in comprehensions)
    "B904",   # Exception raised without from (can be acceptable for internal exceptions)
    "B905",   # Invalid first argument for super() (version-specific patterns)
    "RUF001", # String contains ambiguous Unicode (intentional for homoglyph testing)
    "RUF003", # Comment contains ambiguous Unicode (intentional for homoglyph testing)
]

[tool.ruff.lint.per-file-ignores]
# Env vars must be set before spektralia imports (reads env at import time);
# the post-setup imports are intentional and load-bearing.
"scripts/latency_bench.py" = ["E402"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
pretty = true
disallow_untyped_defs = false
ignore_missing_imports = true
disallow_incomplete_defs = false

[[tool.mypy.overrides]]
module = [
    "pytest.*",
    "respx.*",
    "keyring.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "regex",
    "httpx",
]
ignore_missing_imports = true

[tool.coverage.run]
source = ["src/spektralia"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
# Ratcheted 78 -> 81 -> 85 -> 90 -> 95 as coverage gaps closed (suite ~96%).
# 100%: integrity, heartbeat, scanner, entropy, anomaly, classifier, errors.
# ~99%: audit, cli, patterns. ~92%: ollama_trust. ~93%: memory_safety.
# coverage.py has no native per-module floor; raise the global floor as gaps close.
fail_under = 95
precision = 2
